smten/share/lib/Smten/Tests/ShouldFail/BadType1.smtn

module Smten.Tests.ShouldFail.BadType1 where

import Prelude

foo :: Integer
foo = True

